--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-aws.accessKeyId=AKIAS64F4XTJMYDJBLZN
-aws.secretKey=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
+aws.accessKeyId=
+aws.secretKey=
 
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
