--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ cloud:
       static: ap-south-1
       auto: false
     credentials:
-      access-key: AKIAS64F4XTJMYDJBLZN
-      secret-key: 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
+      access-key: 
+      secret-key: 
 server:
   port: 8073
